package concurrency.model;

public enum RequestType {
    CHANGE_TEXT,
    UNDO,
    REDO,
    REVERT,
    SHUTDOWN
}